# saasworks-interview

./: .gitattributes  .gitignore  .tool-versions  AI-interview.md  Analyst_interview.ipynb  README.md  dbt_project.yml  docker-compose.yml  profiles.yml  pyproject.toml  techstack.md  techstack.yml
models/movies/: all_movies.sql  all_ratings.sql  movie_count.sql
movie-data/: db-setup.sql  movies_metadata.csv
src/: dbt_project.yml  profiles.yml
src/models/: sources.yml
src/models/movies/: all_movies.sql  all_ratings.sql
