[tool.poetry]
name = "dbt-interview"
version = "0.1.0"
description = "SaasWorks DBT Interview project"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dbt_interview"}]

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "^1.3.2"
dbt-core = "^1.10.3"
dbt-duckdb = "^1.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
